--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,5 @@
 name: Release
 
-# Trigger workflow khi push vào main
 on:
   push:
     branches:
@@ -9,24 +8,21 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout code, cần fetch-depth 0 để semantic-release đọc toàn bộ commit history
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      # Cài Node.js version 22.18.0
-      - name: Use Node.js 22
+      - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 22.18.0
+          node-version: 20
+          registry-url: https://registry.npmjs.org/
 
-      # Cài dependencies
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-      # Chạy semantic-release với token từ repository secret
-      - name: Run semantic-release
+      - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
