Change feature label to 'feat' in release.yml

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -6,7 +6,7 @@ changelog:
 
   categories:
     - title: "🚀 Features"
-      labels: ["feature", "enhancement"]
+      labels: ["feat", "enhancement"]
     - title: "🐞 Bug Fixes"
       labels: ["bug", "fix"]
     - title: "🛠 Improvements"
